crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__expression_precedence.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(\"name module { property <- (2 + 3 * 4) }\")"
---
Ok(
    {
        "name": NodeInstruct {
            identifier: "name",
            module: "module",
            inputs: {
                "property": Expression {
                    direction: Input,
                    value: BinaryOperation {
                        operation: Add,
                        left: Number(
                            "2",
                        ),
                        right: BinaryOperation {
                            operation: Multiply,
                            left: Number(
                                "3",
                            ),
                            right: Number(
                                "4",
                            ),
                        },
                    },
                },
            },
        },
    },
)
