crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__expression_with_node_ref-2.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser ::\nparse(r#\"\n                a module_a { x <- 10 }\n                b module_b { y <- (a::x + 5) }\n            \"#)"
---
Ok(
    {
        "a": NodeInstruct {
            identifier: "a",
            module: "module_a",
            inputs: {
                "x": Numeric {
                    direction: Input,
                    value: "10",
                },
            },
        },
        "b": NodeInstruct {
            identifier: "b",
            module: "module_b",
            inputs: {
                "y": Expression {
                    direction: Input,
                    value: BinaryOperation {
                        operation: Add,
                        left: Reference {
                            identifier: "a",
                            property: "x",
                        },
                        right: Number(
                            "5",
                        ),
                    },
                },
            },
        },
    },
)
