crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__implicit_property_assignment.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: nodes
---
Ok(
    {
        "name": NodeInstruct {
            identifier: "name",
            module: "module",
            inputs: {
                "input": String {
                    direction: Input,
                    parts: [
                        Literal(
                            "implicit input",
                        ),
                    ],
                },
                "other": Numeric {
                    direction: Input,
                    value: "123",
                },
                "output": String {
                    direction: Output,
                    parts: [
                        Literal(
                            "implicit output",
                        ),
                    ],
                },
            },
        },
    },
)
