crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__inline_nodes-3.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser ::\nparse(\"name_a module_a { property_a <- name_b module_b::custom {} }\")"
---
Ok(
    {
        "name_a": NodeInstruct {
            identifier: "name_a",
            module: "module_a",
            inputs: {
                "property_a": Relation {
                    identifier: "name_b",
                    direction: Input,
                    property: "custom",
                },
            },
        },
        "name_b": NodeInstruct {
            identifier: "name_b",
            module: "module_b",
            inputs: {
                "custom": Relation {
                    identifier: "name_a",
                    direction: Output,
                    property: "property_a",
                },
            },
        },
    },
)
