crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__inline_nodes.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser ::\nparse(\"name_a module_a { property_a <- anonymous_module_b::custom {} }\")"
---
Ok(
    {
        "[UUID]": NodeInstruct {
            identifier: "[UUID]",
            module: "anonymous_module_b",
            inputs: {
                "custom": Relation {
                    identifier: "name_a",
                    direction: Output,
                    property: "property_a",
                },
            },
        },
        "name_a": NodeInstruct {
            identifier: "name_a",
            module: "module_a",
            inputs: {
                "property_a": Relation {
                    identifier: "[UUID]",
                    direction: Input,
                    property: "custom",
                },
            },
        },
    },
)
